p0 replaced by rho
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10784 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -172,6 +172,11 @@
 	\Name{Vojtech et al.}
 	note on peripheral phase at 8TeV
 
+\bibitem{kmr15-slope}
+	\Name{A.~D.~Martin, V.~A.~Khoze, M.~G.~Ryskin}
+	\REVIEW{J.~Phys.}{G42}{2015}{2, 025003}
+	%doi = http://dx.doi.org/10.1088/0954-3899/42/2/025003
+
 
 % TODO: remove unnecessary references
 
