--- a/2014/90m paper/authorlist_npb.tex
+++ b/2014/90m paper/authorlist_npb.tex
@@ -53,9 +53,11 @@
 %----------------------------------------------------------------------------------------------------
 % include the actual data
 
-\author{The TOTEM Collaboration}
+\author{\small Dedicated to the memory of Prof. E. Lippmaa and Prof. M. Lo Vetere who passed away recently}
 \address{}
-
+\vspace*{-2mm}
+\author{The TOTEM Collaboration}
+\address{\vspace*{-3mm}}
 \input authorlist_data
 
 \DeclareAuthors
