--- a/2014/90m paper/authorlist_data.tex
+++ b/2014/90m paper/authorlist_data.tex
@@ -113,7 +113,7 @@
 %----------------------------------------------------------------------------------------------------
 	
 \def\DeclareExternalInstitutes{%
-	\AddExternalInstitute{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
+	\AddExternalInstitute{a}{INRNE-BAS, Institute for Nucl. Research and Nucl. Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
 	\AddExternalInstitute{b}{Department of Atomic Physics, ELTE University, Budapest, Hungary.}
 	\AddExternalInstitute{c}{Institute of Nuclear Physics, Polish Academy of Science, Krakow, Poland.}
 	\AddExternalInstitute{d}{Warsaw University of Technology, Warsaw, Poland.}
