aligned to the final version published in NPB
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10954 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_cern.tex
+++ b/2014/90m paper/authorlist_cern.tex
@@ -35,10 +35,20 @@
 				#1\IIref{#2}{#3}%
 			\else
 				% primary, secondary and external affiliation
+				#1\IIAref{#2}{#3}{#4}%
 				\relax
 			\fi
 		\fi
 	\fi
+}
+
+%----------------------------------------------------------------------------------------------------
+% Add an author
+% USAGE: \AddCorrespondingAuthor{name}{primary affiliation}{secondary affiliation}{external affiliation}{footnote text}{email}
+
+\def\AddCorrespondingAuthor#1#2#3#4#5#6{%
+	\AddAuthor{#1}{#2}{#3}{*}%
+	\Anotfoot{*}{#5 E-mail address: #6.}
 }
 
 %----------------------------------------------------------------------------------------------------
