--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -99,7 +99,7 @@ Measurements of beam emittances~\cite{op-elog} show that the vertical beam diver
 \includegraphics{fig/beam_divergence_fits.pdf}
 \vskip-4mm
 \caption{%
-Difference between vertical scattering angles reconstructed in the right and left arm, for the diagonal 45 bottom - 56 top. Red: data from run start ($0.5$ to $1.5\un{h}$ from the beginning of the run). Blue: data from run end ($10.5$ to $11.5\un{h}$), scaled by $0.1$. The solid lines represent Gaussian fits.
+Difference between vertical scattering angles reconstructed in the right and left arm, for the diagonal 45 bottom - 56 top. Upper graph (red): data from run start ($0.5$ to $1.5\un{h}$ from the beginning of the run). Lower graph (blue): data from run end ($10.5$ to $11.5\un{h}$), scaled by $0.1$. The solid lines represent Gaussian fits.
 }
 \label{fig:beam divergence}
 \end{center}
@@ -231,7 +231,7 @@ The calculation of the geometrical correction ${\cal A}_{\rm geom}$ is based on 
 \includegraphics{fig/acc_corr_phi_lab.pdf}
 \vskip-3mm
 \caption{%
-Distribution of scattering angle projections $\theta_y^*$ vs.~$\theta_x^*$. The upper (lower) part comes from the diagonal 45 bottom -- 56 top (45 top -- 56 bottom). The colour scale gives number of events (after the ${\cal A}_{\rm fluct}$ correction) per bin. The red horizontal lines represent cuts due to the LHC apertures, the magenta horizontal lines cuts due to the sensor edges. The dotted circles show contours of constant scattering angle $\theta^*$ as indicated in the middle of the plot. The parts of the contours within acceptance are emphasized in thick black.
+Distribution of scattering angle projections $\theta_y^*$ vs.~$\theta_x^*$. The upper (lower) part comes from the diagonal 45 bottom -- 56 top (45 top -- 56 bottom). The colour scale gives number of events (after the ${\cal A}_{\rm fluct}$ correction) per bin. The horizontal lines at $\theta_y^* \approx \pm 100\un{\mu rad}$ (red) represent cuts due to the LHC apertures, while those at $\theta_y^* \approx \pm 30 \un{\mu rad}$ (magenta) represent cuts due to the sensor edges. The dotted circles show contours of constant scattering angle $\theta^*$ as indicated in the middle of the plot. The parts of the contours within acceptance are emphasised in thick black. (For interpretation of the references to colour in this figure legend, the reader is referred to the web version of this article.)
 }
 \label{fig:acceptance principle}
 \end{center}
@@ -282,7 +282,7 @@ One such case is when a single RP cannot detect and/or reconstruct a proton trac
 \includegraphics{fig/eff3outof4_details_fits.pdf}
 \vskip-3mm
 \caption{%
-Single-RP uncorrelated inefficiency for the far top RP in the left arm. The rapid drop at $\theta_y^* \approx 35\un{\mu rad}$ is due to acceptance effects at the sensor edge. The red lines represent a linear fit of the efficiency dependence on the vertical scattering angle (solid) and its extrapolation to the region affected by acceptance effects (dashed).
+Single-RP uncorrelated inefficiency for the far top RP in the left arm. The rapid drop at $\theta_y^* \approx 35\un{\mu rad}$ is due to acceptance effects at the sensor edge. The straight (red) lines represent a linear fit of the efficiency dependence on the vertical scattering angle (solid) and its extrapolation to the region affected by acceptance effects (dashed).
 }
 \label{fig:eff 3/4}
 \end{center}
@@ -394,7 +394,7 @@ In addition, the complete analysis chain has been applied in two independent ana
 Impact of $t$-dependent systematic effects on the differential cross-section. Each curve corresponds to a systematic error at $1\un{\sigma}$, cf.~Eq.~(\ref{eq:syst mode}).
 The two contributions due to optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}).
 The envelope is determined by summing all shown contributions in quadrature for each $|t|$ value.
-The right-hand plot provides a vertical zoom; note that the envelope is out of scale.
+The right plot provides a vertical zoom; note that the envelope is out of scale.
 }
 \label{fig:syst unc}
 \end{center}
