--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -1,4 +1,4 @@
-\documentclass[TOTEM]{cern/cernphprep}
+\documentclass[TOTEM]{cernphprep}
 
 \def\d{{\rm d}}
 \def\un#1{\,{\rm #1}}
@@ -52,6 +52,10 @@
 \input authorlist_cern
 
 %\newpage
+
+\vskip1cm
+\centerline{\footnotesize This article is dedicated to the memory of Prof.~E.~Lippmaa and Prof.~M.~Lo Vetere who passed away recently}%
+\vskip1cm
 
 \begin{abstract}
 \input abstract
