--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -41,21 +41,25 @@
 
 \title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
 
-% TODO: check whether indexes i, l, 1 can be distinguished
 \input authorlist_npb
-
 \date{\today}
-
 
 \begin{abstract}
 \input abstract
+\vbox to 0pt{%
+	\vskip-73mm
+	\centerline{\footnotesize This article is dedicated to the memory of Prof.~E.~Lippmaa and Prof.~M.~Lo Vetere who passed away recently}%
+	\vss
+}
 \end{abstract}
 
-\begin{keyword}
-proton-proton interactions \sep elastic scattering \sep total cross-section \sep LHC \sep TOTEM
-\PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
-%\preprint{CERN-PH-EP-2014-XXXX}
-\end{keyword}
+% NOT SHOWN IN THE FINAL NPB VERSION
+% \begin{keyword}
+% proton-proton interactions \sep elastic scattering \sep total cross-section \sep LHC \sep TOTEM
+% \PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
+% %\preprint{CERN-PH-EP-2014-XXXX}
+% \end{keyword}
+
 \end{frontmatter}
 
 %--------------------------------------------------
