--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -103,7 +103,7 @@ $3$ & $541 \pm 22$ & $-20.14 \pm 0.15$ & $5.95 \pm 1.75$ & $-12.0 \pm 6.2$& $ 25
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit: some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution which at the same time changes the overall normalisation. The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured continuous curves correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The straight (red) line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit: some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution which at the same time changes the overall normalisation. The widest error band (yellow) corresponds to the full systematic uncertainty, the hatched (brown) one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$. (For interpretation of the references to colour in this figure legend, the reader is referred to the web version of this article.)
 }
 \label{fig:data rel ob}
 \end{center}
@@ -143,10 +143,10 @@ Since parameters estimated with the least squares method are unbiased, the test 
 \includegraphics{fig/t_dist_rel_with_split_fit.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The red line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve.
+Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The red line (with two straight segments) shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}). The widest error band (yellow) corresponds to the full systematic uncertainty, the hatched one (brown) includes all systematic contributions except the normalisation. Both bands are centred around the fit curve. (For interpretation of the references to colour in this figure legend, the reader is referred to the web version of this article.)
 }
 \label{fig:data rel cpb0.001}
 \end{center}
 \end{figure*}
 
-Finally, it should be emphasized that the above exclusion of purely exponential behaviour is entirely robust against certain systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
+Finally, it should be emphasised that the above exclusion of purely exponential behaviour is entirely robust against certain systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
